Small changes in the documentation (notes.txt)
- also applied the boot aspect to the project (does not seem to change
  anything)
- updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
+# standard exclusions
 .gradle/
 .idea/workspace.xml
 .idea/tasks.xml
 build/
+
+# folder for user content
 uploads/
+
+# emacs backup files of various types:
 *~
+.#*
+\#*#
 
